removing styled scrollbar for now, was still a little buggy

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -98,12 +98,11 @@ body {
 .chat-widget .chat-room-viewer {
   margin:   5px;
   height: 450px;
-  width:  549px;
+  width:  545px;
   border:   1px solid grey;
   float:  left;
-  overflow:auto;
-} 
-
+  overflow-y: scroll;
+}
 
 .chat-widget .chat-room-viewer .message {
   min-height: 35px;
@@ -127,10 +126,6 @@ body {
 .chat-widget input {
   margin-right:   5px;
   float: right;
-}
-
-.chat-widget .jScrollPaneContainer{
-	float:left;
 }
 
 .status-widget {
